[gd_scene load_steps=15 format=2]

[ext_resource path="res://level/level1.png" type="Texture" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://GameUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/door/door7.png" type="Texture" id=4]
[ext_resource path="res://Goal.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/Dimbo Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/fonts/pxlxxlcond.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://assets/fx/vignette.png" type="Texture" id=12]
[ext_resource path="res://assets/misc/background.png" type="Texture" id=13]
[ext_resource path="res://TwitchClient.tscn" type="PackedScene" id=14]
[ext_resource path="res://DebugOverlay.tscn" type="PackedScene" id=15]

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 11 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 519.355, 10 )

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="TwitchClient" parent="." instance=ExtResource( 14 )]

[node name="background" type="Sprite" parent="."]
position = Vector2( 216, 56 )
scale = Vector2( 0.473046, 0.473045 )
texture = ExtResource( 13 )

[node name="Level" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="Level"]
texture = ExtResource( 1 )
centered = false

[node name="Goal" parent="." instance=ExtResource( 5 )]
position = Vector2( 161.023, 148.065 )

[node name="Door" type="Sprite" parent="."]
position = Vector2( 249.08, 38.5633 )
texture = ExtResource( 4 )

[node name="SpawnPosition" type="Position2D" parent="."]
position = Vector2( 249.51, 38.7127 )

[node name="Streamlings" type="Node2D" parent="."]

[node name="Vignette" type="Sprite" parent="."]
scale = Vector2( 1.44167, 1.2025 )
texture = ExtResource( 12 )
centered = false

[node name="Label" type="Label" parent="."]
margin_left = 6.0
margin_top = 220.0
margin_right = 69.0
margin_bottom = 237.0
custom_fonts/font = SubResource( 2 )
text = "STREAMLINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ground" type="Area2D" parent="."]
position = Vector2( 224, 280 )
collision_layer = 8
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource( 5 )

[node name="DebugOverlay" parent="." instance=ExtResource( 15 )]
visible = false

[node name="Splash" type="ColorRect" parent="."]
visible = false
margin_right = 432.0
margin_bottom = 241.0
color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameUI" parent="." instance=ExtResource( 3 )]

[node name="TODO" type="Label" parent="."]
margin_left = 10.2453
margin_top = 176.843
margin_right = 425.245
margin_bottom = 219.843
rect_rotation = -18.8792
custom_fonts/font = SubResource( 6 )
text = "TODO: Eigene States f√ºr DIE und SHRINK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="received_chat_message" from="TwitchClient" to="." method="_on_TwitchClient_received_chat_message"]
[connection signal="received_command" from="TwitchClient" to="." method="_on_TwitchClient_received_command"]
[connection signal="streamling_reached_goal" from="Goal" to="." method="_on_Goal_streamling_reached_goal"]
[connection signal="body_entered" from="Ground" to="." method="_on_Ground_body_entered"]
